# doc-vault

./: .env.example  .gitignore  README.md  docker-compose.yml  output.txt  pyproject.toml
app/: main.py
app/api/v1/: admin.py  chat.py  documents.py
app/core/: security.py
app/models/: schemas.py
app/services/ai/: agent.py  ingestion.py  tools.py
app/services/backend/: auth.py
backend/: .env.example  docker-compose.yml  output.txt  pyproject.toml  tasks.md
backend/app/: main.py
backend/app/api/v1/: chat.py
backend/app/core/: config.py  database.py
backend/app/models/: schemas.py
backend/app/services/ai/: vector.py
backend/app/services/backend/: auth.py  storage.py
backend/infra/: realm-export.json
frontend/: package-lock.json  package.json
infra/: init.sql
